# GigQ

./: .gitignore  404.html  CHANGELOG.md  FRICTION.md  GITHUB_TOPICS.md  README.md  __init__.py  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
advanced/concurrency/: index.html
advanced/custom-job-types/: index.html
advanced/db_utils/: index.html
advanced/performance/: index.html
advanced/sqlite-schema/: index.html
api/cli/: index.html
api/core/: index.html
changelog/: index.html
development/contributing/: index.html
development/roadmap/: index.html
development/testing/: index.html
docs/: changelog.md  faq.md  index.md  news.md
docs/advanced/: concurrency.md  db_utils.md  performance.md  sqlite-schema.md
docs/api/: cli.md  core.md
docs/development/: contributing.md  testing.md
docs/examples/: data-processing.md  github-archive.md  hyperparameter-tuning.md  parallel-tasks.md  scheduled-tasks.md
docs/getting-started/: installation.md  quick-start.md
docs/integrations/: mcp.md
docs/user-guide/: cli.md  decorators.md  defining-jobs.md  error-handling.md  job-queue.md  scheduling.md  workers.md  workflows.md
examples/: __init__.py  data_pipeline.py  hyperparameter_tuning.py  parallel_tasks.py
examples/data-processing/: index.html
examples/github-archive/: index.html
examples/hyperparameter-tuning/: index.html
examples/parallel-tasks/: index.html
examples/scheduled-tasks/: index.html
faq/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
gigq/: __init__.py  cli.py  db_utils.py  decorators.py  job.py  job_queue.py  utils.py  worker.py  workflow.py
integrations/mcp/: index.html
mcp_server/: README.md  pyproject.toml  test_smoke.py
mcp_server/gigq_mcp/: __init__.py  _smoke_fixtures.py  handlers.py  server.py
news/: index.html
search/: search_index.json
tests/: README.md  job_functions.py
tests/integration/: base.py  test_cli.py  test_decorator.py  test_retry_delay.py  test_worker_concurrency.py  test_workflow_parent_results.py
tests/unit/: test_cli.py  test_db_utils.py  test_decorators.py  test_job.py  test_job_queue.py  test_thread_local_job_queue.py  test_workflow.py
user-guide/cli/: index.html
user-guide/decorators/: index.html
user-guide/defining-jobs/: index.html
user-guide/error-handling/: index.html
user-guide/job-queue/: index.html
user-guide/scheduling/: index.html
user-guide/workers/: index.html
user-guide/workflows/: index.html
