[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigq"
version = "0.5.0"
description = "A lightweight job queue system with SQLite backend and zero dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "GigQ Team", email = "info@gigq.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# No dependencies!
dependencies = []

[project.optional-dependencies]
examples = [
    "requests",
    "pandas",
    "schedule",
    "scikit-learn",
]
docs = [
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mike",
]
dev = [
    "pytest",
    "black",
    "coverage",
    "mypy",
]
all = [
    "gigq[examples,docs,dev]",
]

[project.urls]
Homepage = "https://github.com/kpouianou/gigq"
Documentation = "https://kpouianou.github.io/GigQ/"
Issues = "https://github.com/kpouianou/gigq/issues"

[project.scripts]
gigq = "gigq.cli:main"

[tool.setuptools]
packages = ["gigq"]

[tool.setuptools.package-data]
gigq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["gigq"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]